# spinner

./: .gitlab-ci.yml  AUTHORS  README  common.h  configure.ac  couplings.h  cubic.c  data.c  error.c  error.h  getters.c  graph.c  ising.c  lattice.c  macros.h  makefile.am  malloc.c  metropolis.c  nvector.c  params.c  readme.md  spinner.c  spinner.h  step.c  sys.c  system.c  utils.c  utils.h  utils_source.c
doc/: conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
